--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
     <h1>Main menu</h1>
 	<br><br>
 	<a href="customers">Manage Customers</a><br>
+    <a href="users">Manage Users</a><br>
 	
 	
 {% endblock %}
