add transactions and events

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Main menu</h1>
-	<br><br>
+    <h1>Animal Rescue & Clinic</h1>
+	<br>
 	<a href="customers">Manage Customers</a><br>
     <a href="users">Manage Users</a><br>
-	
+	<a href="animals">Manage Animals</a><br>
+    <a href="transactions">Manage Transactions</a><br>
+    <a href="events">Manage Events</a><br>
 	
 {% endblock %}
