--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -7,10 +7,10 @@
 		<input type="text" name="userFName" value="{{ user.userFName }}" /><br><br>
 		
 		Last Name:<br>
-		<input type="text" name="LName" value="{{ user.userLName }}" /><br><br>
+		<input type="text" name="userLName" value="{{ user.userLName }}" /><br><br>
 		
 		Email:<br>
-		<input type="text" name="email" value="{{ user.userEmail }}" /><br><br>
+		<input type="text" name="userEmail" value="{{ user.userEmail }}" /><br><br>
 		
 		<input type="hidden" name="userID" value="{{ user.userID }}" />
 		
@@ -26,7 +26,7 @@
 			<option value="employee" >employee</option>
 		</select>
 		
-		<br>
+		<br><br>
 		
 		<input type="submit" value="Save user"/>
 			
