--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	  <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
     <body>
-        <div>Goto: <a href="/main">Main menu</a></div>
+        <div>Go to: <br><a href="/main">Main menu</a><br><a href="/logout">Logout</a></div>
         <hr>
         {% block content %}{% endblock %}
     </body>
