customer vs admin views

--- a/templates/animal/animal.html
+++ b/templates/animal/animal.html
@@ -7,8 +7,9 @@
 		Animal Name:<br>
 		<input type="text" name="animalName" value="{{ animal.animalName }}" /><br><br>
 		
-		Animal Type:<br>
-		<input type="text" name="animalType" value="{{ animal.animalType }}" /><br><br>
+		Animal Type<br>
+		<input type="radio" name="animalType" value="Cat">"Cat"<br>
+        <input type="radio" name="animalType" value="Dog">"Dog"<br><br>
 		
 		Animal Breed:<br>
 		<input type="text" name="animalBreed" value="{{ animal.animalBreed }}" /><br><br>
@@ -32,6 +33,14 @@
             <option value="Available" >Available</option>
             <option value="Regular Patient" >Regular Patient</option>
         </select><br><br>
+        
+        Owner?:<br>
+            <select name="userID">
+                <option value="NULL" >No associated owner</option>
+                {% for user in users %}
+                <option value="{{ user.userID }}">{{ user.userFName }} {{ user.userLName }}({{ user.userType }})</option>
+                {% endfor %}
+            </select> <br><br>
         
         Animal Photo URL:<br>
 		<input type="text" name="animalPhoto" value="{{ animal.animalPhoto }}" /><br><br>
