--- a/templates/animal/pickanimaltype.html
+++ b/templates/animal/pickanimaltype.html
@@ -4,6 +4,11 @@
 
 {% block content %}
     <h1>Adoption</h1>
+    <div id="description">Thank you for considering adopting a forever friend from our shelter! All donation fees help us to continue to care for animals in need in the community<br> 
+    Adoption fees for our animals are as follows:<br>
+    Dogs: $150 <br>
+    Cats: $50 <br>
+    </div>
     
     <h4>Please choose what category of animals you would like to view:</h4>
 		
