--- a/templates/animal/viewanimal.html
+++ b/templates/animal/viewanimal.html
@@ -27,6 +27,7 @@
 		<input type="hidden" name="animalID" value="{{ animal.animalID }}" />
 		
 		<br><br>
+        <a href="newadoption?animalID={{ animal.animalID }}">Adopt This Animal</a><br><br>
 		
     <body>
 {% endblock %}
