--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,13 @@
 	  <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
     <body>
-        <div>Go to: <br><a href="/main">Main menu</a><br><a href="/logout">logout needs to be fixed</a></div>
+        <div>Go to: <br>
+            <a href="/main">Home</a><br>
+            <a href="/mainadmin">Employee Main Menu</a><br>
+            <a href="/login">login</a><br>
+            <a href="/logout">logout</a>
+        </div>
+
         <hr>
         {% block content %}{% endblock %}
     </body>
