--- a/templates/login.html
+++ b/templates/login.html
@@ -12,14 +12,19 @@
 		
 		<form action="login" method="POST">
 			
-			Email:<br>
+			<br>Email:<br>
 			<input type="text" name="email" /><br><br>
 			
 			Password:<br>
 			<input type="password" name="password" /><br><br>
 			
 			
-			<input type="submit" value="Login"/>
+			<input type="submit" value="Login"/><br><br>
 			
 		</form>
+        
+        <a href="/main">Back to Home Page</a><br><br>
+        
+        <a href="/newusercustomer">Create new account</a>
+        
 {% endblock %}
