--- a/templates/main.html
+++ b/templates/main.html
@@ -2,6 +2,11 @@
 
 {% block content %}
     <h1>Animal Rescue & Clinic</h1>
+    <div id="description">
+    Welcome to our website! We are committed to serving our community and helping animals in need. Here on our website you can schedule an appointment, view our adoptable animals, and even make a donation that could help save lives here at our shelter! Thank you for your support.<br><br>
+    To contact us for more information call (000)000-0000 <br>Or visit our shelter at 000 Main Street, Potsdam, NY 13676
+    
+    <div>
     
 	<br>
     {% if msg %}
@@ -13,6 +18,6 @@
     
 	<a href="pickanimaltype">Adopt</a><br><br>
     <a href="newdonation">Donate</a><br><br>
-    <a href="events">Schedule an appointment</a><br>
+    <a href="newappointment">Schedule an appointment</a><br>
 	
 {% endblock %}
