--- a/templates/transaction/newdonation.html
+++ b/templates/transaction/newdonation.html
@@ -16,7 +16,7 @@
             
             <input type="hidden" name="transactionID" value="{{ transaction.transactionID }}" />
 			
-			Transaction Amount:<br>
+			Donation Amount:<br>
 			<input type="text" name="transactionAmount" /><br><br>
 			
 			
