--- a/templates/animal/adoptable.html
+++ b/templates/animal/adoptable.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>Adoptable {{ type }}s</h1>
 
-		<table>
+		<table border="1px">
 		<tr>
 			<td>ID</td>
             <td>name</td>
