lots and lots of fixes

--- a/templates/animal/adoptable.html
+++ b/templates/animal/adoptable.html
@@ -21,8 +21,11 @@
                 <td>{{ animal.animalType }}</td>
                 <td>{{ animal.animalBreed }}</td>
                 <td>{{ animal.animalGender }}</td>
-                <td><img src="Toby.jpg"></td>
+                <td><img src={{ animal.animalPhoto }} height="100" width="100"></td>
             </tr>
         {% endfor %}
-        </table>
+        </table><br><br>
+        
+        <a href="pickanimaltype">Back to Animal Type</a><br><br>
+        
 {% endblock %}
