--- a/templates/event/adoptionevent.html
+++ b/templates/event/adoptionevent.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
+<!-- event -->
+
 {% block content %}
-    <h1>Adopt this animal</h1>
+    <h1>Confirm Adoption</h1>
 	{% if msg %}
       <div id="errormsg">
 	  {% for err in msg %}
@@ -9,25 +11,26 @@
 	  {% endfor %}
 	  </div>
     {% endif %}
+    
+    Transaction Successful
 		
-		<form action="/newadoption?animalID={{ animal.animalID }}" method="POST">
+		<form action="/adoptionevent?animalID={{ animal.animalID }}&transactionID={{ transaction.transactionID }}" method="POST">
         
             <input type="hidden" name="animalID" value="{{ animal.animalID }}" />
+            
+            <input type="hidden" name="animalStatus" value="Adopted" />
             
             <input type="hidden" name="eventType" value="Adoption" />
             <input type="hidden" name="transactionType" value="Adoption" />
 			 
             <input type="hidden" name="eventName" value="Adoption of {{ animal.animalName }}" />
             
-            <input type="hidden" name="eventID" value="{{ event.eventID }}"/>
-            
             
             <input type="hidden" name="transactionID" value="{{ transaction.transactionID }}"/>
-            
-            
+                        
 			<br><br>
 			
-			<input type="submit" value="Save event"/>
+			<input type="submit" value="Confirm Adoption"/>
 			
 		</form>
 {% endblock %}
