--- a/templates/event/events.html
+++ b/templates/event/events.html
@@ -12,7 +12,7 @@
         {% for event in events %}
             <tr>
                 <td><a href="event?eventID={{ event.eventID }}">{{ event.eventID }}</a></td>
-                <td>{{ event.eventName }} {{ event.eventName }}</td>
+                <td>{{ event.eventName }} </td>
                 <td>{{ event.animalID }}</td>
             </tr>
         {% endfor %}
