--- a/templates/event/newevent.html
+++ b/templates/event/newevent.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>New event</h1>
+    <h1>New Event</h1>
 	{% if msg %}
       <div id="errormsg">
 	  {% for err in msg %}
@@ -9,11 +9,19 @@
 	  {% endfor %}
 	  </div>
     {% endif %}
+
 		
 		<form action="/newevent" method="POST">
 			 
             Event Type:<br>
-            <input type="text" name="eventType" /><br><br>
+            <select name="eventType">
+                <option value="Adoption">Adoption</option>
+                <option value="Check up">Check up</option>
+                <option value="Procedure">Procedure</option>
+                <option value="Emergency">Emergency</option>
+                <option value="Meet & Greet">Meet & Greet</option>
+                <option value="Other">Other</option>
+            </select> <br><br>
             
             Event Name:<br>
             <input type="text" name="eventName" /><br><br>
@@ -26,7 +34,7 @@
             Animal:<br>
             <select name="animalID">
                 {% for animal in al %}
-                <option value="{{ animal.aid }}">{{ animal.animalName }} ({{ animal.animalBreed }} {{ animal.animalType }})</option>
+                <option value="{{ animal.animalID }}">{{ animal.animalName }} ({{ animal.animalBreed }} {{ animal.animalType }})</option>
                 {% endfor %}
             </select> <br><br>
             
@@ -36,8 +44,6 @@
             Date to be completed:<br>
             <input type="datetime-local" name="eventCompletedDate" /><br><br>
             
-            Transaction ID #TODO fix this:<br>
-            <input type="text" name="transactionID" /><br><br>
             
 			
 			<br><br>
