--- a/templates/transaction/newdonation.html
+++ b/templates/transaction/newdonation.html
@@ -17,7 +17,7 @@
             <input type="hidden" name="transactionID" value="{{ transaction.transactionID }}" />
 			
 			Donation Amount:<br>
-			<input type="text" name="transactionAmount" /><br><br>
+			$<input type="text" name="transactionAmount" /><br><br>
 			
 			
 			<input type="submit" value="Make Donation"/>
