added credentials to README and github links to main pages

--- a/templates/main.html
+++ b/templates/main.html
@@ -19,5 +19,9 @@
 	<a href="pickanimaltype">Adopt</a><br><br>
     <a href="newdonation">Donate</a><br><br>
     <a href="newappointment">Schedule an appointment</a><br>
+    
+    <br><br><br><br><br>
+    
+	<a href="https://github.com/rj138xc/IS437_final_project">View on GitHub</a>
 	
 {% endblock %}
