--- a/templates/mainadmin.html
+++ b/templates/mainadmin.html
@@ -15,5 +15,9 @@
 	<a href="animals">Manage Animals</a><br>
     <a href="transactions">Manage Transactions</a><br>
     <a href="events">Manage Events</a><br>
-	
+    
+    <br><br><br><br><br>
+    
+	<a href="https://github.com/rj138xc/IS437_final_project">View on GitHub</a>
+    
 {% endblock %}
